--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.7",
+    "@vuepress/bundler-vite": "^2.0.0-rc.25",
     "@vuepress/plugin-search": "^2.0.0-rc.55",
     "@vuepress/theme-default": "^2.0.0-rc.11",
     "sass-embedded": "^1.79.5",
     "vue": "^3.4.0",
     "vuepress": "^2.0.0-rc.7"
+  },
+  "volta": {
+    "node": "22.19.0"
   }
 }
